--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@types/node": "^24.8.1",
     "chai": "^4.3.10",
     "prettier": "^3.1.1",
     "vite": "^5.0.10",
